refactor(all): Refactor response.Err structure
