# chi/crud-gorm/internal/api/handler/v1/article.go
@@ -40,13 +40,13 @@ func NewArticleHandler(svc ArticleService) *ArticleHandler {
 // @Produce      json
 // @Param        request   body      request.CreateArticleRequest true "request body"
 // @Success      200      {object}   domain.Article
-// @Failure      400      {object}   response.ErrResponse
-// @Failure      500      {object}   response.ErrResponse
+// @Failure      400      {object}   response.Err
+// @Failure      500      {object}   response.Err
 // @Router       /articles [post]
 func (h *ArticleHandler) HandleCreateArticle(w http.ResponseWriter, r *http.Request) {
 	req := request.CreateArticleRequest{}
 	if err := render.Bind(r, &req); err != nil {
-		_ = render.Render(w, r, response.NewBadRequest(err))
+		_ = render.Render(w, r, response.ErrBadRequest(err))
 
 		return
 	}
@@ -58,20 +58,20 @@ func (h *ArticleHandler) HandleCreateArticle(w http.ResponseWriter, r *http.Requ
 	})
 	if err != nil {
 		if errors.Is(err, service.ErrArticleDuplicated) {
-			_ = render.Render(w, r, response.NewBadRequest(service.ErrArticleDuplicated))
+			_ = render.Render(w, r, response.ErrBadRequest(service.ErrArticleDuplicated))
 
 			return
 		}
 
 		err = fmt.Errorf("v1.HandleCreateArticle -> h.svc.CreateArticle -> %w", err)
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
 
 	render.Status(r, http.StatusCreated)
 	if err = render.Render(w, r, response.NewArticle(&article)); err != nil {
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
@@ -83,21 +83,21 @@ func (h *ArticleHandler) HandleCreateArticle(w http.ResponseWriter, r *http.Requ
 // @Produce      json
 // @Param        articleID   path    int  true "article ID"
 // @Success      200      {object}   domain.Article
-// @Failure      400      {object}   response.ErrResponse
-// @Failure      404      {object}   response.ErrResponse
-// @Failure      500      {object}   response.ErrResponse
+// @Failure      400      {object}   response.Err
+// @Failure      404      {object}   response.Err
+// @Failure      500      {object}   response.Err
 // @Router       /articles/{articleID} [get]
 func (h *ArticleHandler) HandleGetArticle(w http.ResponseWriter, r *http.Request) {
 	rawArticleID := chi.URLParam(r, "articleID")
 	articleID, err := strconv.Atoi(rawArticleID)
 	if err != nil {
-		_ = render.Render(w, r, response.NewInvalidInput("articleID", rawArticleID))
+		_ = render.Render(w, r, response.ErrInvalidInput("articleID", rawArticleID))
 
 		return
 	}
 
 	if articleID <= 0 {
-		_ = render.Render(w, r, response.NewNotFound("article", "ID", articleID))
+		_ = render.Render(w, r, response.ErrNotFound("article", "ID", articleID))
 
 		return
 	}
@@ -105,19 +105,19 @@ func (h *ArticleHandler) HandleGetArticle(w http.ResponseWriter, r *http.Request
 	article, err := h.svc.GetArticle(r.Context(), uint(articleID))
 	if err != nil {
 		if errors.Is(err, service.ErrArticleNotFound) {
-			_ = render.Render(w, r, response.NewNotFound("article", "ID", articleID))
+			_ = render.Render(w, r, response.ErrNotFound("article", "ID", articleID))
 
 			return
 		}
 
 		err = fmt.Errorf("v1.HandleGetArticle -> h.svc.GetArticle -> %w", err)
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
 
 	if err = render.Render(w, r, response.NewArticle(&article)); err != nil {
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
@@ -130,14 +130,14 @@ func (h *ArticleHandler) HandleGetArticle(w http.ResponseWriter, r *http.Request
 // @Param        page     query      int  false  "which page to load. Default to 1 if empty."
 // @Param        per_page query      int  false  "how many items per page. Default to 10 if empty."
 // @Success      200      {object}   []domain.Article
-// @Failure      500      {object}   response.ErrResponse
+// @Failure      500      {object}   response.Err
 // @Router       /articles [get]
 func (h *ArticleHandler) HandleListArticles(w http.ResponseWriter, r *http.Request) {
 	pageVal := r.Context().Value(middleware.PageQueryKey)
 	page, ok := pageVal.(uint)
 	if !ok {
 		err := fmt.Errorf("key %q's value %v cannot be casted into uint", middleware.PageQueryKey, pageVal)
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
@@ -145,7 +145,7 @@ func (h *ArticleHandler) HandleListArticles(w http.ResponseWriter, r *http.Reque
 	perPage, ok := perPageVal.(uint)
 	if !ok {
 		err := fmt.Errorf("key %q's value %v cannot be casted into uint", middleware.PerPageQueryKey, perPage)
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
@@ -153,13 +153,13 @@ func (h *ArticleHandler) HandleListArticles(w http.ResponseWriter, r *http.Reque
 	articles, err := h.svc.ListArticles(r.Context(), page, perPage)
 	if err != nil {
 		err = fmt.Errorf("v1.HandleListArticles -> h.svc.ListArticles -> %w", err)
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
 
 	if err = render.RenderList(w, r, response.NewArticles(articles)); err != nil {
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
@@ -172,7 +172,7 @@ func (h *ArticleHandler) HandleListArticles(w http.ResponseWriter, r *http.Reque
 // @Param        title    query     string  false  "search by title"
 // @Param        content  query     string  false  "search by content"
 // @Success      200      {object}   []domain.Article
-// @Failure      500      {object}   response.ErrResponse
+// @Failure      500      {object}   response.Err
 // @Router       /articles/search [get]
 func (h *ArticleHandler) HandleSearchArticles(w http.ResponseWriter, r *http.Request) {
 	titleParam := r.URL.Query().Get("title")
@@ -181,13 +181,13 @@ func (h *ArticleHandler) HandleSearchArticles(w http.ResponseWriter, r *http.Req
 	articles, err := h.svc.SearchArticles(r.Context(), titleParam, contentParam)
 	if err != nil {
 		err = fmt.Errorf("v1.HandleSearchArticles -> h.svc.SearchArticles -> %w", err)
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
 
 	if err = render.RenderList(w, r, response.NewArticles(articles)); err != nil {
-		_ = render.Render(w, r, response.NewInternalServerError(err))
+		_ = render.Render(w, r, response.ErrInternalServerError(err))
 
 		return
 	}
