# gin/minimum/docs/swagger.json
@@ -37,7 +37,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrResponse"
+                            "$ref": "#/definitions/response.Err"
                         }
                     }
                 }
@@ -74,7 +74,7 @@
                 }
             }
         },
-        "response.ErrResponse": {
+        "response.Err": {
             "type": "object",
             "properties": {
                 "error": {
@@ -83,10 +83,6 @@
                 },
                 "error_code": {
                     "description": "application-specific error code",
-                    "type": "integer"
-                },
-                "status": {
-                    "description": "http response status code",
                     "type": "integer"
                 }
             }
