# gin/minimum/internal/api/handler/v1/response/render.go
@@ -1,14 +1,0 @@
-package response
-
-import (
-	"github.com/gin-gonic/gin"
-	"go.uber.org/zap"
-)
-
-func RenderError(ctx *gin.Context, e *ErrResponse) {
-	if e.StackErr != nil {
-		zap.L().Error(e.StackErr.Error())
-	}
-
-	ctx.JSON(e.StatusCode, e)
-}
